fix: corrige sobreposição do header fixo e contraste do menu

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ body{
     line-height:1.6;
     color:#222;
     background:#fff;
+    padding-top: 90px; /* compensa o header fixo (min-height: 90px) */
+}
+
+/* Compensa o header fixo ao usar links de âncora (#sobre, #produtos etc.) */
+section[id],
+footer#contato {
+    scroll-margin-top: 100px;
 }
 
  /*Menu e Header*/
@@ -56,7 +63,7 @@ body{
     display: block;
     width: 100%;
     height: 5px;
-    background-color: #333;
+    background-color: #fff;
     margin-bottom: 5px;
     transition: all 0.3s;
 }
